# AutoAnnotationTool

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
AutoAnnotationTool/: AutoAnnotationTool.pro  CMakeLists.txt  OpencvTypeConverter.cpp  annotationmanager.cpp  annotationmanager.h  datasaver.cpp  datasaver.h  geometrymodule.cpp  geometrymodule.h  labelcollector.cpp  labelcollector.h  labeldata.h  labeldatamodel.cpp  main.cpp  main.qml  mouseselectresult.h  opencvtypeconverter.cpp  opencvtypeconverter.h  qml.qrc
AutoAnnotationTool/CV/: CvModule.cpp  CvModule.h  CvModule.hpp  GeometryModule.cpp  GeometryModule.h  cvmodule.cpp  cvmodule.h  cvparam.cpp  cvparam.h
AutoAnnotationTool/CV/SegmentationPolicy/: Grabcut.hpp
AutoAnnotationTool/MaterialDesign/: FlatButton.qml  UIConstants.qml  qmldir
AutoAnnotationTool/QItem/: AnnotationManager.cpp  AnnotationManager.h  CvParam.cpp  CvParam.h  LabelCollector.cpp  LabelCollector.h  LableDataModel.cpp  LableDataModel.h
AutoAnnotationTool/Setting/: CVParamSettingPage.qml  LabelClassEditPage.qml  SettingWindow.qml
AutoAnnotationTool/Type/: TypeConverter.hpp
AutoAnnotationTool/include/: LableData.h
AutoLabel/: AutoLabel.pro  cvmodule.cpp  cvmodule.h  datasaver.cpp  datasaver.h  labelcollector.cpp  labelcollector.h  labeldata.h  labeldatamodel.cpp  labeldatamodel.h  main.cpp  main.qml  mouseselectresult.h  qtopencvconverter.cpp  qtopencvconverter.h
AutoLabel/CV/: cvmodule.cpp  cvmodule.h
